; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx5/extr_cq.c_mlx5_cq_read_wc_imm_data.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ofed/libmlx5/extr_cq.c_mlx5_cq_read_wc_imm_data.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ibv_cq_ex = type { i32 }
%struct.mlx5_cq = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ibv_cq_ex*)* @mlx5_cq_read_wc_imm_data to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mlx5_cq_read_wc_imm_data(%struct.ibv_cq_ex* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.ibv_cq_ex*, align 8
  %4 = alloca %struct.mlx5_cq*, align 8
  store %struct.ibv_cq_ex* %0, %struct.ibv_cq_ex** %3, align 8
  %5 = load %struct.ibv_cq_ex*, %struct.ibv_cq_ex** %3, align 8
  %6 = call i32 @ibv_cq_ex_to_cq(%struct.ibv_cq_ex* %5)
  %7 = call %struct.mlx5_cq* @to_mcq(i32 %6)
  store %struct.mlx5_cq* %7, %struct.mlx5_cq** %4, align 8
  %8 = load %struct.mlx5_cq*, %struct.mlx5_cq** %4, align 8
  %9 = getelementptr inbounds %struct.mlx5_cq, %struct.mlx5_cq* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = call i32 @mlx5dv_get_cqe_opcode(%struct.TYPE_2__* %10)
  switch i32 %11, label %19 [
    i32 128, label %12
  ]

12:                                               ; preds = %1
  %13 = load %struct.mlx5_cq*, %struct.mlx5_cq** %4, align 8
  %14 = getelementptr inbounds %struct.mlx5_cq, %struct.mlx5_cq* %13, i32 0, i32 0
  %15 = load %struct.TYPE_2__*, %struct.TYPE_2__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @be32toh(i32 %17)
  store i32 %18, i32* %2, align 4
  br label %25

19:                                               ; preds = %1
  %20 = load %struct.mlx5_cq*, %struct.mlx5_cq** %4, align 8
  %21 = getelementptr inbounds %struct.mlx5_cq, %struct.mlx5_cq* %20, i32 0, i32 0
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  store i32 %24, i32* %2, align 4
  br label %25

25:                                               ; preds = %19, %12
  %26 = load i32, i32* %2, align 4
  ret i32 %26
}

declare dso_local %struct.mlx5_cq* @to_mcq(i32) #1

declare dso_local i32 @ibv_cq_ex_to_cq(%struct.ibv_cq_ex*) #1

declare dso_local i32 @mlx5dv_get_cqe_opcode(%struct.TYPE_2__*) #1

declare dso_local i32 @be32toh(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
